--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,23 @@
 						 </executions>
 
 					 </plugin>
+					 <plugin>
+						 <groupId>com.google.cloud.tools</groupId>
+						 <artifactId>jib-maven-plugin</artifactId>
+						 <version>2.5.2</version>
+						 <configuration>
+							 <from>
+								 <image>openjdk:16</image>
+							 </from>
+							 <container>
+								 <mainClass>com.qlicue.school.SchoolApplication</mainClass>
+								 <ports>
+									 <port>8083</port>
+								 </ports>
+								 <format>OCI</format>
+							 </container>
+						 </configuration>
+					 </plugin>
 				 </plugins>
 			 </build>
 		</profile>
